# Learning-FastAPI

./: .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  render.yml  requirements.txt  streamlit_app.py
app/: main.py
app/api/: routes_auth.py  routes_predict.py
app/cache/: redis_cache.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/db/: database.py  users.db
app/middleware/: logging_middleware.py
app/services/: model_service.py
notebooks/: myNotebook.ipynb
training/: train_model.py  train_utils.py
