[project]
name = "myproject"
version = "0.1.0"
description = "Car Price Prediction API with FastAPI, SQLite, Redis, and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi==0.110.0",
    "joblib==1.5.3",
    "numpy==2.2.6",
    "pandas>=2.3.3",
    "prometheus-fastapi-instrumentator==6.1.0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "redis==5.0.4",
    "requests>=2.31.0",
    "scikit-learn==1.7.2",
    "streamlit>=1.32.0",
    "uvicorn[standard]==0.29.0",
]
